tests/__snapshots__/feature-reporters-project-error-stderr.snap.txt
Error: Compiler option 'strict' requires a value of type boolean. ts(5024)

  1 | {
  2 |   "compilerOptions": {
  3 |     "strict": "yes"
    |               ~~~~~
  4 |   },
  5 |   "extends": "../../tsconfig.json",
  6 |   "include": [

      at ./tsconfig.json:3:15

